Estruturando e estilizando a primeira sessão do conteúdo e a sessão com o banner ilustrativo

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/global.css" />
     <link rel="stylesheet" href="./assets/css/banner/banner.css" />
+    <link rel="stylesheet" href="./assets/css/content/modules.css" />
+    <link rel="stylesheet" href="./assets/css/content/imageBanner.css" />
 </head>
 
 <body>
@@ -30,12 +32,39 @@
         </div>
     </header>
 
-    <main>
-        <section></section>
-        <section></section>
-        <section></section>
+    <main class="content">
+
+        <section class="content__modules">
+            <h2 class="modules__title">O QUE VOU APRENDER?</h2>
+            <p class="modules__text">
+                    Temos 3 módulos recheados de conteúdos do básico ao avançado para que você aprenda a 
+                    desenvolver sites profissionais utilizando somente HTML e CSS: sem nenhuma biblioteca ou 
+                    framework a mais.
+            </p>
+            <div class="modules__description">
+                <span class="description__highlight">Módulo 01:</span> primeiros passos com CSS
+            </div>
+            <div class="modules__description">
+                <span class="description__highlight">Módulo 02:</span> trabalhando com layouts no CSS
+            </div>
+            <div class="modules__description">
+                <span class="description__highlight">Módulo 03:</span> refinando os estilos CSS das nossas páginas
+            </div>
+        </section>
+
+        <section class="content__imageBanner">
+            <h3 class="imageBanner__title">transforme o mundo com a gente</h3>
+        </section>
+
+        <section class = content__challenges>
+            <h2>EVOLUA E ENCARE NOVOS DESAFIOS PROFISSIONAIS</h2>
+            <img src="./assets/img/technology.png" alt="homem lendo algo em um tablet e 4 caixinhas com foto de profissionais e seus respectivos cargos" />
+        </section>
     </main>
-    <footer></footer>
+
+    <footer class="footer">
+
+    </footer>
 
 </body>
 </html>
