--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="./assets/css/banner/banner.css" />
     <link rel="stylesheet" href="./assets/css/content/modules.css" />
     <link rel="stylesheet" href="./assets/css/content/imageBanner.css" />
+    <link rel="stylesheet" href="./assets/css/content/challenges.css" />
 </head>
 
 <body>
@@ -56,9 +57,14 @@
             <h3 class="imageBanner__title">transforme o mundo com a gente</h3>
         </section>
 
-        <section class = content__challenges>
-            <h2>EVOLUA E ENCARE NOVOS DESAFIOS PROFISSIONAIS</h2>
-            <img src="./assets/img/technology.png" alt="homem lendo algo em um tablet e 4 caixinhas com foto de profissionais e seus respectivos cargos" />
+        <section class="content__challenges">
+            <h2 class="challenges_title">EVOLUA E ENCARE NOVOS DESAFIOS PROFISSIONAIS</h2>
+            <img class="challenges_image" src="./assets/img/technology.png" alt="homem lendo algo em um tablet e 4 caixinhas com foto de profissionais e seus respectivos cargos" />
+            <p class="challenges_text">Junte-se ao nosso ecossistema e transforme o mundo com a gente! Todos os dias dezenas de empresas 
+                acessam a nossa plataforma em busca dos talentos mais criativos, dinâmicos e colaborativos, 
+                além do conhecimento técnico. A nossa missão é te preparar para que você conecte-se com as 
+                melhores oportunidades.
+            </p>
         </section>
     </main>
 
