Criando e estilizando o rodapé

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="./assets/css/content/modules.css" />
     <link rel="stylesheet" href="./assets/css/content/imageBanner.css" />
     <link rel="stylesheet" href="./assets/css/content/challenges.css" />
+    <link rel="stylesheet" href="./assets/css/footer/footer.css" />
 </head>
 
 <body>
@@ -69,7 +70,8 @@
     </main>
 
     <footer class="footer">
-
+        <img class="footer__image" src="./assets/img/logo_DIO.png" alt="logo Dio Make The Change" />
+        <p class="footer__text">Acesse <a href="https://www.dio.me/" target="_blank" class="footer__link">dio.me</a> e se cadastre agora</p>
     </footer>
 
 </body>
